; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/efi/extr_runtime-wrappers.c_virt_efi_update_capsule.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/efi/extr_runtime-wrappers.c_virt_efi_update_capsule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@efi = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@EFI_2_00_SYSTEM_TABLE_REVISION = common dso_local global i64 0, align 8
@EFI_UNSUPPORTED = common dso_local global i32 0, align 4
@efi_runtime_lock = common dso_local global i32 0, align 4
@EFI_ABORTED = common dso_local global i32 0, align 4
@EFI_UPDATE_CAPSULE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i64, i64)* @virt_efi_update_capsule to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @virt_efi_update_capsule(i32** %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @efi, i32 0, i32 0), align 8
  %10 = load i64, i64* @EFI_2_00_SYSTEM_TABLE_REVISION, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @EFI_UNSUPPORTED, align 4
  store i32 %13, i32* %4, align 4
  br label %25

14:                                               ; preds = %3
  %15 = call i64 @down_interruptible(i32* @efi_runtime_lock)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = load i32, i32* @EFI_ABORTED, align 4
  store i32 %18, i32* %4, align 4
  br label %25

19:                                               ; preds = %14
  %20 = load i32, i32* @EFI_UPDATE_CAPSULE, align 4
  %21 = load i32**, i32*** %5, align 8
  %22 = call i32 @efi_queue_work(i32 %20, i32** %21, i64* %6, i64* %7, i32* null, i32* null)
  store i32 %22, i32* %8, align 4
  %23 = call i32 @up(i32* @efi_runtime_lock)
  %24 = load i32, i32* %8, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %19, %17, %12
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i64 @down_interruptible(i32*) #1

declare dso_local i32 @efi_queue_work(i32, i32**, i64*, i64*, i32*, i32*) #1

declare dso_local i32 @up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
